load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bes_lib",
    srcs = ["bes.go"],
    importpath = "github.com/tweag/rules_img/cmd/bes",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/auth/credential",
        "//pkg/auth/protohelper",
        "//pkg/cas",
        "//pkg/proto/build_event_service",
        "//pkg/serve/bes",
        "//pkg/serve/bes/syncer",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "bes",
    embed = [":bes_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)
