load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "compress",
    srcs = ["compress.go"],
    importpath = "github.com/malt3/rules_img/cmd/compress",
    visibility = ["//visibility:public"],
    deps = [
        "//src/api",
        "//src/compress",
        "//src/fileopener",
    ],
)
