load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "compress",
    srcs = [
        "compress.go",
        "flagtypes.go",
    ],
    importpath = "github.com/tweag/rules_img/cmd/compress",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api",
        "//pkg/compress",
        "//pkg/fileopener",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)
