load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "downloadblob",
    srcs = ["downloadblob.go"],
    importpath = "github.com/tweag/rules_img/cmd/downloadblob",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_malt3_go_containerregistry//pkg/authn",
        "@com_github_malt3_go_containerregistry//pkg/name",
        "@com_github_malt3_go_containerregistry//pkg/v1/remote",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)
