load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "img_lib",
    srcs = ["img.go"],
    importpath = "github.com/malt3/rules_img/cmd/img",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/compress",
        "//cmd/layer",
        "//cmd/layermeta",
        "//cmd/manifest",
        "//cmd/push",
        "@rules_go//go/runfiles",
    ],
)

go_binary(
    name = "img",
    embed = [":img_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
