load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "img_lib",
    srcs = ["img.go"],
    importpath = "github.com/tweag/rules_img/cmd/img",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/compress",
        "//cmd/index",
        "//cmd/layer",
        "//cmd/layermeta",
        "//cmd/manifest",
        "//cmd/push",
        "//cmd/validate",
        "//pkg/api",
        "@rules_go//go/runfiles",
    ],
)

go_binary(
    name = "img",
    embed = [":img_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)
