load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "index",
    srcs = [
        "flags.go",
        "index.go",
    ],
    importpath = "github.com/tweag/rules_img/cmd/index",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_opencontainers_image_spec//specs-go",
        "@com_github_opencontainers_image_spec//specs-go/v1:specs-go",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)
