load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "layer",
    srcs = [
        "flagtypes.go",
        "layer.go",
        "paramfile.go",
    ],
    importpath = "github.com/tweag/rules_img/cmd/layer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api",
        "//pkg/compress",
        "//pkg/contentmanifest",
        "//pkg/tarcas",
        "//pkg/tree",
        "//pkg/tree/runfiles",
        "//pkg/tree/treeartifact",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)
