load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "layermeta",
    srcs = [
        "flagtypes.go",
        "layermeta.go",
    ],
    importpath = "github.com/tweag/rules_img/cmd/layermeta",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api",
        "//pkg/fileopener",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)
