load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "load",
    srcs = ["load.go"],
    importpath = "github.com/tweag/rules_img/cmd/load",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/load",
        "@rules_go//go/runfiles",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)
