load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "manifest",
    srcs = [
        "flagtypes.go",
        "manifest.go",
    ],
    importpath = "github.com/tweag/rules_img/cmd/manifest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api",
        "@com_github_opencontainers_go_digest//:go-digest",
        "@com_github_opencontainers_image_spec//specs-go",
        "@com_github_opencontainers_image_spec//specs-go/v1:specs-go",
    ],
)
