load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "push",
    srcs = [
        "metadata.go",
        "push.go",
    ],
    importpath = "github.com/tweag/rules_img/cmd/push",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api",
        "//pkg/auth/credential",
        "//pkg/auth/protohelper",
        "//pkg/cas",
        "//pkg/proto/blobcache",
        "//pkg/push",
        "//pkg/serve/registry/types",
        "@com_github_malt3_go_containerregistry//pkg/v1:pkg",
        "@com_github_malt3_go_containerregistry//pkg/v1/types",
        "@rules_go//go/runfiles",
    ],
)
