load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "registry_lib",
    srcs = [
        "flagtypes.go",
        "registry.go",
    ],
    importpath = "github.com/tweag/rules_img/cmd/registry",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/auth/credential",
        "//pkg/auth/protohelper",
        "//pkg/proto/blobcache",
        "//pkg/serve/blobcache",
        "//pkg/serve/registry",
        "//pkg/serve/registry/reapi",
        "//pkg/serve/registry/s3",
        "//pkg/serve/registry/upstream",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_malt3_go_containerregistry//pkg/registry",
        "@com_github_malt3_go_containerregistry//pkg/v1:pkg",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "registry",
    embed = [":registry_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//img/private/release:__subpackages__"],
)
