load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:multi_deploy.bzl", "multi_deploy")

go_library(
    name = "app_lib",
    srcs = ["main.go"],
    importpath = "github.com/tweag/rules_img/e2e/go/image",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

multi_deploy(
    name = "deploy_all",
    operations = [
        "//customization:push",
        "//image:push",
        "//multiarch:push",
    ],
)
