module(name = "go_e2e")

# BEGIN BAZEL_DEP
bazel_dep(
    name = "rules_img",
    version = "0.2.3",
)
local_path_override(
    module_name = "rules_img",
    path = "../..",
)

bazel_dep(name = "rules_img_tool")
local_path_override(
    module_name = "rules_img_tool",
    path = "../../src",
)

register_toolchains("@rules_img_tool//toolchain:all")
# END BAZEL_DEP

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
